# thrifty

./: .gitignore  AGENTS.md  BUILD_FROM_START.html  OPEN_TUTORIAL.html  README.md  docker-compose.yml  fly.toml  goal.md
agents/: backend-architect.md  content-architect.md  devops-architect.md  mobile-architect.md  qa-architect.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_session_revocation.py
backend/app/: config.py  db.py  deps.py  main.py  observability.py
backend/app/models/: __init__.py  alert.py  alert_delivery_log.py  auth_token.py  base.py  notification_token.py  subscription.py  user.py
backend/app/routers/: alerts.py  auth.py  health.py  notifications.py  subscriptions.py
backend/app/schemas/: alert.py  auth.py  notification.py  subscription.py
backend/app/services/: alert_engine.py  magic_link.py  notifier.py  scheduler.py
backend/tests/: conftest.py  test_alert_engine.py  test_auth.py  test_integration_trial_conversion.py  test_subscriptions.py
docs/: 00-IMPLEMENTATION-PLAN.md  01-PRD.md  02-ARCHITECTURE.md  03-DATA-MODEL.md  04-API-CONTRACT.md  05-BACKLOG.md  06-DEPLOYMENT.md  07-TUTORIAL-AND-LAUNCH-VIDEO.md  08-BUILD-FROM-START.md  09-COPY-DECK.md  10-NO-NODE-QA.md  11-DECISION-LOG.md
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
scripts/: bootstrap.sh  lint_copy.py  test_all.sh  test_ios.sh  test_tutorial_html.py
testsprite_tests/: TC001_gethealthapiavailability.py  TC002_postv1authstartmagiclinkissuance.py  (+11 more)
(+38 files in other folders)
