[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thrifty-backend"
version = "1.0.0"
description = "Thrifty Phase 1 FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "aiosmtplib>=3.0.2",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.5.2",
  "pyjwt>=2.9.0",
  "sentry-sdk>=2.16.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "freezegun>=1.5.1",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
